# agent-node

./: Cargo.toml
src/: app_state.rs  error.rs  history.rs  lib.rs  main.rs  mcp.rs  mcp_protocol.rs  process.rs  session.rs  state.rs  tools.rs
tests/: history_test.rs  process_test.rs  state_test.rs
